--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ install:
 script:
   - pylint src/ --ignore=class_traffic.py
 #   - pytest --cov=. --cov-report xml
-# after_success:
-#   - python-codacy-coverage -r coverage.xml
+after_success:
+  - python-codacy-coverage -r coverage.xml
