--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pylint src/ --ignore=class_traffic, class_orbit
+  - pylint src/ --ignore=class_traffic.py, class_orbit.py
   - pytest --cov=. --cov-report xml
 after_success:
   - python-codacy-coverage -r coverage.xml
