Cleaning up duplicated code

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Traffic_Problem_1.zip
 src/class_orbit.py
 src/class_traffic.py
+src/main.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
