--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Locally generated files
 Traffic_Problem_1.zip
-Traffic_Problem_2.zip
+Traffic_Problem_06Nov2019.zip
 src/class_orbit.py
 src/class_traffic.py
 src/main.py
