--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,4 @@
 [MESSAGES CONTROL]
-disable=C0103, C0413, E0401, E1101, E0611
+disable=C0103, C0413, E0401, E1101, E0611, W0612
 [MASTER]
 ignore-patterns=^class
