--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/cache@v1.0.0
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
@@ -17,8 +18,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Cache
-      uses: actions/cache@v1.0.0
     - name: Lint with flake8
       run: |
         pip install flake8
