--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - uses: actions/cache@v1.0.0
+      if: startsWith(runner.os, 'Linux')
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
